--- a/.env
+++ b/.env
@@ -8,13 +8,20 @@ PORT=5000
 
 DB_NAME=BDPatientGestion
 
-DB_AUTH_NAME=BDAuth
+DB_AUTH_NAME=BDAuth492
 
 
 
-#Login_bd
-
+#Principal
 DB_USER=p0st4syst3m
 DB_PASSWORD=Desarrollador_10+
-DB_HOST=posta-system.database.windows.net
+DB_HOST=tesis-system492.database.windows.net
+
+#Login_bd
+DB_AUTH_USER=p0st4syst3m
+DB_AUTH_PASSWORD=Desarrollador_10+
+DB_AUTH_HOST=auth-system492.database.windows.net
+
+
+#Dialect
 DB_DIALECT=mssql
