--- a/package.json
+++ b/package.json
@@ -11,20 +11,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@jsreport/jsreport-chrome-pdf": "^4.1.0",
+    "@jsreport/jsreport-handlebars": "^4.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsreport": "^4.7.0",
-    "jsreport-chrome-pdf": "^1.10.0",
-    "jsreport-core": "^2.10.1",
-    "jsreport-handlebars": "^2.1.0",
     "mssql": "^11.0.1",
     "mysql2": "^3.11.4",
-    "projectartefact_(backend)": "file:",
-    "projectartefact-(backend)": "file:",
     "projectartefact-backend": "file:",
-    "projectartefact(backend)": "file:",
+    "puppeteer": "^23.8.0",
     "sequelize": "^6.37.5",
     "uuid": "^11.0.3"
   }
