--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 #puerto
 
+DB_PORT=1433
+
 PORT=5000
-
-
 
 #Nombres_bd
 
@@ -25,5 +25,6 @@ DB_AUTH_HOST=auth-system492.database.windows.net
 
 #Dialect
 DB_DIALECT=mssql
+
 
 API_TOKEN=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6Imhvbm9qdWFuOUBnbWFpbC5jb20ifQ.HHyPK1eIvEB9rIjgM6X3OEz9eLpAHALAytvN0aTpMaM
